Added fade to black module

--- a/Motor2D/Motor2D.vcxproj.filters
+++ b/Motor2D/Motor2D.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Widgets.cpp">
       <Filter>Desenvolupament  ========\GUI</Filter>
     </ClCompile>
+    <ClCompile Include="j1FadeToBlack.cpp">
+      <Filter>Desenvolupament  ========\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Window.h">
@@ -150,6 +153,9 @@
     </ClInclude>
     <ClInclude Include="Widgets.h">
       <Filter>Desenvolupament  ========\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="j1FadeToBlack.h">
+      <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
